# hmidi

./: LICENSE  README  System-MIDI-Base.html  System-MIDI-Sync.html  System-MIDI-Utility.html  System-MIDI.html  doc-index.html  hmidi.cabal  hmidi.haddock  index-frames.html  index.html  mini_System-MIDI-Base.html  mini_System-MIDI-Sync.html  mini_System-MIDI-Utility.html  mini_System-MIDI.html
System/: MIDI.hs
System/MIDI/: Base.hs  MacOSX.hs  Placeholder.hs  Sync.hs  Utility.hs  Win32.hs
System/MacOSX/: CoreAudio.hs  CoreFoundation.hs  CoreMIDI.hs
System/Win32/: MIDI.hs
examples/: GM.hs  SMF.hs  chords.hs  monitor.hs  playmidi.hs
